// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`service:list integration should display non federated message for a non federated service vanilla 1`] = `
"Loading Apollo Project [started]
Loading Apollo Project [completed]
Fetching list of services for graph engine [started]
Fetching list of services for graph engine [completed]

There are no services on this federated graph
"
`;

exports[`service:list integration should list services correctly for a federated service vanilla 1`] = `
"Loading Apollo Project [started]
Loading Apollo Project [completed]
Fetching list of services for graph engine [started]
Fetching list of services for graph engine [completed]

name       URL                            last updated
─────────  ─────────────────────────────  ─────────────────────────
accounts   http://localhost:4001/graphql  13 May 2019 (a month ago)
inventory  http://localhost:4002/graphql  16 May 2019 (a month ago)
products   http://localhost:4003/graphql  16 May 2019 (a month ago)
reviews    http://localhost:4004/graphql  16 May 2019 (a month ago)

View full details at: https://engine-staging.apollographql.com/graph/engine/service-list
"
`;
